--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <main class="roboto">
         <div class="main-div">
+            <div class="text-div">
             <h1>Simple Battleship</h1>
+            <p class="text-center fw-medium">Press reset to play again</p>
+            </div>
             <div class="grid-div">
                 <div class="grid-square"></div>
                 <div class="grid-square"></div>
@@ -24,8 +27,11 @@
                 <div class="grid-square"></div>
                 <div class="grid-square"></div>
             </div>
+            <label for="resetButton" class="fw-medium">Reset</label>
+            <button id="resetButton" class="m-2"><i class="fa fa-undo" aria-hidden="true"></i></button>
         </div>
     </main>
+    <script src="https://kit.fontawesome.com/6fd030c6e8.js" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 </body>
 
