added bomb count

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 
 <body>
-    <main class="roboto">
-        <div class="main-div">
+    <main>
+        <div class="main-div roboto">
             <div class="text-div">
             <h1>Simple Battleship</h1>
             <p class="text-center fw-medium">Press reset to play again</p>
+            <div class="lives-div text-center fw-medium">
+                <p id="lives">Bombs: 3</p>
+            </div>
             </div>
             <div class="grid-div">
                 <div class="grid-square"></div>
