--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <main>
         <div class="main-div roboto">
             <div class="text-div">
-            <h1>Simple Battleship</h1>
-            <p class="text-center fw-medium">Press reset to play again</p>
-            <div class="lives-div text-center fw-medium">
-                <p id="lives">Bombs: 3</p>
-            </div>
+                <h1>Simple Battleship</h1>
+                <p class="text-center fw-medium">Press reset to play again</p>
+                <div class="lives-div text-center fw-medium">
+                    <p id="lives">Bombs: 3</p>
+                </div>
             </div>
             <div class="grid-div">
                 <div class="grid-square"></div>
@@ -32,8 +32,16 @@
             </div>
             <label for="resetButton" class="fw-medium">Reset</label>
             <button id="resetButton" class="m-2"><i class="fa fa-undo" aria-hidden="true"></i></button>
+            <div id="customAlert" class="custom-modal hidden">
+                <div class="modal-box">
+                    <p id="customAlertTitle"></p>
+                    <p id="customAlertText"></p>
+                    <button id="customAlertClose">Close</button>
+                </div>
+            </div>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6fd030c6e8.js" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 </body>
